closes #2 Adicionar CSS externo

--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traffic Light</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="traffic-light">
             <div class="panel">
                 
-                <div class="red-light">
+                <div class="light light-off">
 
                 </div>
 
-                <div class="yellow-light">
+                <div class="light light-off">
 
                 </div>
 
-                <div class="green-light">
+                <div class="light light-off">
 
                 </div>
 
