closes #3 Implementar a lógica do botão com JavaScript

--- a/index.html
+++ b/index.html
@@ -11,22 +11,23 @@
         <div class="traffic-light">
             <div class="panel">
                 
-                <div class="light light-off">
+                <div id="red" class="light light-off">
 
                 </div>
 
-                <div class="light light-off">
+                <div id="yellow" class="light yellow-light">
 
                 </div>
 
-                <div class="light light-off">
+                <div id="green" class="light light-off">
 
                 </div>
 
             </div>
         </div>
 
-        <button>Click Me</button>
+        <button onclick="changeTrafficLight()">Click Me</button>
     </div>
+    <script src="javascript.js"></script>
 </body>
 </html>
